# wot-consume

./: Cargo.toml  README.md
.github/workflows/: wot-consume.yml
src/: data_schema_validator.rs  json.rs  lib.rs  sealed.rs
tests/: tests.rs
