[package]
name = "wot-consume"
version = "0.1.0"
edition = "2021"
description = "Web of Things (WoT) Thing consumer"
license = "MIT"
repository = "https://github.com/sifis-home/wot-consume"
keywords = ["wot", "WebofThings"]

[dependencies]
bitflags = "2.2.1"
rand = "0.8.5"
regex-syntax = "0.7.1"
reqwest = "0.11.11"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
wot-td = "0.3.1"
zeroize = { version = "1.6.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
