[package]
name = "wot-consume"
version = "0.1.0"
edition = "2021"
description = "Web of Things (WoT) Thing consumer"
license = "MIT"
repository = "https://github.com/sifis-home/wot-consume"
keywords = ["wot", "WebofThings"]

[dependencies]
bitflags = "2.2.1"
rand = "0.8.5"
regex = "1.8.3"
regex-syntax = "0.7.1"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
url = "2.3.1"
wot-td = { version = "0.3.1", path = "../wot-td" }
zeroize = { version = "1.6.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
